// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`loadPaginatedGeneProperties action Dispatches appropriately on error condition 1`] = `
{
  "payload": {
    "componentUuid": "asd",
    "properties": [
      "a",
      "b",
      "c",
    ],
  },
  "type": "genes/propertiesLoading",
}
`;

exports[`loadPaginatedGeneProperties action Dispatches appropriately on error condition 2`] = `
{
  "payload": {
    "componentUuid": "asd",
    "error": [Error: random error!],
    "experimentId": "1234",
    "properties": [
      "a",
      "b",
      "c",
    ],
  },
  "type": "genes/propertiesError",
}
`;

exports[`loadPaginatedGeneProperties action Dispatches appropriately on success condition 1`] = `
{
  "payload": {
    "componentUuid": "asd",
    "properties": [
      "a",
      "b",
      "c",
    ],
  },
  "type": "genes/propertiesLoading",
}
`;

exports[`loadPaginatedGeneProperties action Dispatches appropriately on success condition 2`] = `
{
  "payload": {
    "componentUuid": "asd",
    "data": {
      "a": {
        "dispersions": 1,
      },
      "b": {
        "dispersions": 1,
      },
    },
    "experimentId": "1234",
    "properties": [
      "a",
      "b",
      "c",
    ],
    "total": 2,
  },
  "type": "genes/propertiesLoadedPaginated",
}
`;

exports[`loadPaginatedGeneProperties action Dispatches appropriately on success condition 3`] = `
[
  "1234",
  {
    "limit": 20,
    "name": "ListGenes",
    "offset": 20,
    "orderBy": "gene_names",
    "orderDirection": "ASC",
    "selectFields": [
      "gene_names",
      "a",
      "b",
      "c",
    ],
  },
  [Function],
  [Function],
  {
    "timeout": 60,
  },
]
`;
